# remis-aventine

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
calibration-packs/: evidence-alignment-v1.manifest.json  multilingual-48-v1.manifest.json  remis-tournament-2026-07-16.manifest.json  xcomet-local-v1.manifest.json
docs/assets/brand/: README.md
docs/zh/developer/: README.md  aces_adapter.md  calibration_and_remis_compat.md  external_metric_runtimes.md  first_remis_tournament_2026-07-16.md  judge_provider_comparison_2026-07-15.md  mt_metrics_eval_adapter.md  multilingual_calibration.md  vision_and_workflow.md
examples/calibration/: fake-aces-v1.json  fake-mqm-v1.json  remis-synthetic-v1.json
examples/metrics/: smoke-v1.json
examples/recipes/: remis-lm-studio.example.json
runtimes/: metricx-24-cu128.txt  xcomet-xl-cu128.txt
src/remis_aventine/: __init__.py  __main__.py  calibration.py  calibration_pack.py  cli.py  doctor.py  evidence_alignment.py  external_metrics.py  judge.py  metric_calibration.py  remis_pairwise.py  validation.py
src/remis_aventine/adapters/: __init__.py  aces.py  mt_metrics_eval.py  remis.py
src/remis_aventine/metric_workers/: __init__.py  metricx.py  xcomet.py
src/remis_aventine/schemas/: __init__.py  judge-result.schema.json  metric-pack.schema.json  metric-result.schema.json  recipe-manifest.schema.json  run-result.schema.json
tests/: test_aces_adapter.py  test_calibration.py  test_calibration_pack.py  test_cli.py  test_doctor.py  test_evidence_alignment.py  test_external_metrics.py  test_judge.py  test_metric_calibration.py  test_mt_metrics_eval_adapter.py  test_remis_adapter.py  test_remis_pairwise.py  test_validation.py
